--- a/ProEventos-App/package.json
+++ b/ProEventos-App/package.json
@@ -21,6 +21,8 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.2",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^12.0.0",
+    "ngx-toastr": "^14.2.4",
     "pro-eventos-app": "file:",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
